SERVER-13890 index bounds builder should not pass already-constructed intervals to translate() (cherry picked from commit d19801d6209d6635e4fb9c42245723f1f1869bf0)